--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cs4550_sp20
+spring.datasource.url=jdbc:mysql://localhost:3306/cs4550_sp20?serverTimezone=UTC
 spring.datasource.username=cs4550
 spring.datasource.password=cs4550
 spring.jpa.hibernate.ddl-auto=update
